home/dot_config/waybar/style.css
* {
    border: none;
    font-family: monospace, "Font Awesome 5 Pro", "Hack Nerd Font";
    font-size: 13px;
}

window#waybar, tooltip {
    background: rgba(60, 56, 54, 0.9);
    color: rgba(235, 219, 178, 1);
}

label, button {
    background: inherit;
    color: inherit;
}

#workspaces button {
    padding: 0 5px;
    background: transparent;
    color: inherit;
    border-radius: 6px;
}

#workspace button.visible {
    font-weight: 900;
    border: 1px dotted #ebdbb2;
}

#workspaces button.focused {
    background: #ebdbb2;
    color: rgba(60, 56, 54, 0.9);
}

#clock, #battery, #network, #cpu, #memory, #temperature, #backlight, #wireplumber, #custom-gpu, #custom-vpn {
    padding: 0 10px;
/*
    margin-left: 15px
*/
    border-left: 1px dotted #ebdbb2;
    border-radius: 6px;
}

#idle_inhibitor, #tray, #custom-vpn {
    padding: 0;
    margin: 0;
    min-width: 23px;
    color: white;
}

#tray {
    padding-left: 3px;
}

/*
#clock {
    color: #66899d;
    border-bottom: 2px solid #66899d;
}

#network {
    color: #527c77;
    border-bottom: 2px solid #527c77;
}

#cpu {
    color: #919652;
    border-bottom: 2px solid #919652;
}

#memory {
    color: #8d6494;
    border-bottom: 2px solid #8d6494;
}

#wireplumber {
    color: #b04c50;
    border-bottom: 2px solid #b04c50;
}

#custom-vpn {
    border-left: 1px dotted #ebdbb2;
    border-radius: 6.5px;
}
*/
#tray {
    margin-left: 3px;
    font-family: sans-serif;
}

